# viz-orbital

./: README.MD  package-lock.json  package.json  turbo.json
apps/backend/: .env.example  .gitignore  package.json  pyproject.toml  requirements.txt
apps/backend/src/app/: __init__.py  config.py  data.py  route.py  schema.py  utils.py
apps/web/: .env  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
apps/web/src/: App.jsx  index.css
apps/web/src/components/Apartment/: columns.jsx  data-table.jsx
apps/web/src/components/CameraZoom/: index.jsx
apps/web/src/components/Controls/: index.jsx
apps/web/src/components/Filter/: index.jsx
apps/web/src/components/SprinteObject/: index.jsx
apps/web/src/components/SpriteScene/: index.jsx
apps/web/src/components/ui/: slider.jsx
apps/web/src/constant/: index.js
apps/web/src/hooks/: useApartment.js
apps/web/src/services/: index.js
apps/web/src/utils/: index.js
